# Paperwhiz

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: qa_model.py  summarizer.py  test.ipynb  test.py
backend/app/tools/: rag_tool.py  summarizer.py
backend/app/utils/: doc_loaders.py  file_utils.py  messages_utils.py  model_utils.py  prompt_utils.py  text_splitters.py  text_utils.py
backend/tools/: rag_tool.py
backend/utils/: file_utils.py  vector_store.py
database/: crud.py  models.py
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/upload/: page.tsx
notebooks/: test.ipynb
